<resources>
    <string name="facebook_application_id" translatable="false">2123804667883029</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2123804667883029</string>
    <string name="app_name">Comprame</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="available_units">Unidades disponibles</string>
    <string name="price">Precio</string>
    <string name="publish_article">Publicar Artículo</string>
    <string name="publish_article_success">Publicado!</string>
    <string name="delete_success">Eliminado!</string>
    <string name="publish_article_error">Error al publicar</string>
    <string name="location_is_mandatory">Es necesario activar la ubicación</string>
    <string name="signin_success">Success! You logged in!</string>
    <string name="list_articles">Listar artículos</string>
    <string name="generic_error">Hubo un error</string>
    <string name="generic_success">OK!</string>
    <string name="delete">Eliminar</string>
    <string name="article_edit">Edit</string>
    <string name="articles">Artículos</string>
    <string name="new_article">Nuevo Artículo</string>
    <string name="my_account">Mi cuenta</string>
    <string name="home">Inicio</string>
    <string name="email">Email</string>
    <string name="account_picture">Foto de Perfil</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="user_articles">Mis artículos</string>
    <string name="my_items">Mis artículos</string>
    <string name="no_results">No hay resultados</string>
    <string name="user_has_no_articles">No tenés artículos bajo tu usuario. Publica uno nuevo!</string>
    <string name="edit">Editar</string>
    <string name="ok">OK</string>
    <string name="edit_article_save">Guardar</string>
    <string name="article_delete">Borrar articulo</string>
    <string name="edit_article_image_desc">Imagen del articulo</string>
    <string name="list_article_image">Imagen del articulo</string>
    <string name="article_images">Imágenes</string>
    <string name="image_gallery">Galeria</string>
    <string name="image_camera">Camara</string>
    <string name="article_has_no_images">Este artículo aún no tiene imágenes asociadas.\nCargá una desde la galería o la cámara!</string>
    <string name="image_view_desc">Imagen de articulo</string>
    <string name="open_activity_map">Mapa de actividades</string>
    <string name="hold_for_detail">Mantener Presionado para Abrir</string>
    <string name="search_hint">Buscar Artículo</string>
    <string name="max_km">Max km</string>
    <string name="category">Categoria</string>
    <string name="distance">Distancia</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="product">Producto</string>
    <string name="article">Articulo</string>
    <string name="search_filters">Filtros de busqueda</string>
    <string name="search">Buscar</string>
    <string name="open_chat">Chat (debug)</string>
    <string name="send">Enviar</string>
    <string name="could_not_load_messages">Error buscando mensajes anteriores</string>
    <string name="dollarsign">$</string>
    <string name="ask_seller">preguntar al vendedor</string>
    <string name="buy">comprar</string>
    <string name="available_units_tag">artículo(s) disponible(s)</string>
    <string name="scan_qr">Escanear QR</string>
    <string name="show_qr">Mostrar codigo QR</string>
    <string name="qr_code">Codigo QR</string>
    <string name="more">mas opciones</string>
    <string name="my_purchases">Mis compras</string>
    <string name="no_purchases">Todavia no hiciste ninguna compra</string>
    <string name="cash_shipment_cost">Costo de envío (en efectivo):</string>
    <string name="does_not_ship">No envía</string>
    <string name="touch_again_for_detail">Volver a tocar para abrir</string>
    <string name="shipment_cost_error">No se pudo calcular el costo de envío</string>
    <string name="score">Puntaje</string>
    <string name="categories">Categorías:</string>
    <string name="no_questions">No hay preguntas cargadas para este articulo</string>
    <string name="chat">chat</string>
    <string name="your_question">Tu pregunta</string>
    <string name="questions_label">Preguntas</string>
    <string name="welcome_message">Hola!\nQué estás buscando?</string>
    <string name="your_answer">Tu respuesta</string>
    <string name="hint">hint</string>
    <string name="answer_activity_label">Responder</string>
    <string name="answer">Responder</string>
    <string name="my_answers">Mis Respuestas</string>
    <string name="payment_method">Medio de Pago</string>
    <string name="address">Dirección</string>
    <string name="shipment">Envío</string>
    <string name="shipment_cost">Costo de envío</string>
    <string name="confirm_purchase">Confirmar compra</string>
    <string name="total_amount">Total</string>
    <string name="cash">Efectivo</string>
    <string name="credit_card">Tarjeta de crédito</string>
    <string name="units">Unidades</string>
    <string name="debit_card">Tarjeta de débito</string>
    <string name="no_sales">Todavía no vendiste ningún producto :(</string>
    <string name="notifications_admin_channel_name">test</string>
    <string name="notifications_admin_channel_description">testest</string>
    <string name="payment_status">Pago: %1$s</string>
    <string name="shipment_status">Envío: %1$s</string>
    <string name="pending">Pendiente</string>
    <string name="done">Realizado</string>
    <string name="cancelled">Cancelado</string>
    <string name="not_found">No se encuentra</string>
    <string name="account_history">Historial</string>
    <string name="no_account_events">No hay eventos en tu historial</string>
    <string name="my_event_history">Mi historial</string>
    <string name="account_event_timestamp_placeholder">(Fecha desconocida)</string>
    <string name="account_event_detail"><b>%1$s</b> de %2$s</string>
    <string name="purchase">Compra</string>
    <string name="sale">Venta</string>
    <string name="publication">Publicación</string>
    <string name="score_increment">Sumó %1$s puntos</string>
    <string name="edit_image_done">Listo</string>
    <string name="edit_image_delete_hint">Mantené presionada una imagen para quitarla</string>
</resources>
