<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TableRow
        android:id="@+id/Article_Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/product" />

        <EditText
            android:id="@+id/filter_search_text"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/article"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/Price_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:padding="5dp" />

        <EditText
            android:id="@+id/filter_min_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:ems="10"
            android:hint="@string/min"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/filter_max_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:ems="10"
            android:hint="@string/max"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:id="@+id/Distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/distance" />

        <EditText
            android:id="@+id/filter_max_distance"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_km"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow
        android:id="@+id/Category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/category" />

        <ar.uba.fi.mercadolibre.views.TagsSpinner
            android:id="@+id/filter_tags"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown" />
    </TableRow>

</LinearLayout>