<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_weight=".70"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:text="@string/available_units" />

            <TextView
                android:id="@+id/item_available_units"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_weight=".40"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="0dp"
                android:layout_weight=".60"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/edit_article"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".30"
        android:text="@string/article_edit" />
</LinearLayout>
