<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AccountActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@color/md_grey_200"
                android:contentDescription="@string/account_picture"
                android:src="@drawable/ic_image_white_24dp" />

            <ImageButton
                android:contentDescription="@string/edit"
                android:onClick="onChangePicture"
                android:src="@drawable/ic_edit_black_24dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/name" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70" />

            <ImageButton
                android:contentDescription="@string/edit"
                android:onClick="onChangeName"
                android:src="@drawable/ic_edit_black_24dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70" />

            <ImageButton
                android:contentDescription="@string/edit"
                android:onClick="onChangeEmail"
                android:src="@drawable/ic_edit_black_24dp" />

        </TableRow>

    </TableLayout>

</android.widget.LinearLayout>

